# emojiril

./: README.md  emojiril  pyproject.toml  tea.yaml
.github/workflows/: publish.yml
emojiril2/: __init__.py
